# LANRage

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  WEBUI_MIGRATION_COMPLETE.md  WHATS_MISSING.md  fly.toml  install_and_run.bat  install_and_run_advanced.bat  lanrage.py  pyproject.toml  quick_install.bat  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game_profile_request.md
.github/workflows/: auto-tag.yml  ci.yml  pylint.yml  release.yml  ruff.yml  update-readme-version.yml  update-supported-games-readme.yml
.kiro/hooks/: auto-translate-content.kiro.hook  update-docs-on-change.kiro.hook
.kiro/steering/: code-quality.md  development.md  product.md  structure.md  tech.md
api/: server.py
core/: __init__.py  broadcast.py  config.py  conflict_resolver.py  connection.py  control.py  control_client.py  discord_integration.py  exceptions.py  games.py  ipam.py  logging_config.py  metrics.py  mod_sync.py  nat.py  network.py  operation_lock.py  party.py  profiler.py  relay_selector.py  server_browser.py  settings.py  task_manager.py  updater.py  utils.py
core/control_plane/: __init__.py  control.py  control_client.py  party.py  settings.py
core/gameplay/: __init__.py  broadcast.py  games.py  server_browser.py
core/integrations/: __init__.py  discord_integration.py  updater.py
core/networking/: __init__.py  connection.py  ipam.py  nat.py  network.py
core/observability/: __init__.py  logging_config.py  metrics.py  profiler.py
docs/: API.md  ARCHITECTURE.md  BROADCAST.md  CI_CD.md  COMPARISON.md  CONNECTION.md  CONTROL_PLANE.md  CONTROL_PLANE_SERVER.md  DEEP_DIVE.md  DISCORD.md  DISCORD_APP_SETUP.md  DISCORD_INTEGRATION_RATIONALE.md  DISCORD_RICH_PRESENCE_SETUP.md  DISCORD_SETUP_GUIDE.md  GAMES.md  GITHUB_RELEASE_SETUP.md  METRICS.md  MODERNIZATION.md  NAT_TRAVERSAL.md  NETWORK.md  ORACLE_RELAY.md  PARTY.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_PROFILING.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  RELAY_SERVER.md  ROADMAP.md  SERVER_BROWSER.md  SESSION_PROGRESS.md  SETTINGS.md  STARTUP_VALIDATION.md  SUPPORTED_GAMES.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  VERSIONING.md  WIREGUARD_SETUP.md
docs/diagrams/: CI_CD_AUTOMATION.md  CLIENT_COMPONENTS.md  CONNECTION_STATE_MACHINE.md  CONTROL_PLANE_STATE_MACHINE.md  CONTROL_SERVER_CLEANUP_LOOP.md  CONTROL_SERVER_REQUEST_FLOW.md  DATA_PLANE_PATHS.md  FAILURE_DOMAINS.md  NAT_STRATEGY_DECISION_TREE.md  NETWORK_INTERFACE_LIFECYCLE.md  PARTY_HOST_JOIN_LIFECYCLE.md  README.md  RUNTIME_CONTROL_LOOPS.md  SEQUENCE_CONNECTION_FALLBACK.md  SEQUENCE_GAME_MODSYNC.md  SYSTEM_FLOW.md  (+4 more)
game_profiles/: README.md  battle_royale.json  card_board.json  competitive.json  coop.json  extraction.json  fighting.json  fps.json  horror.json  mmo.json  moba.json  party.json  platformer.json  racing.json  roguelike.json  rpg.json  sandbox.json  simulation.json  sports.json  strategy.json  survival.json  tower_defense.json
servers/: __init__.py  control_server.py  relay_server.py
static/: dashboard.html  discord.html  index.html  servers.html  settings.html
tests/: __init__.py  check_db.py  conftest.py  test_all.py  test_api_prometheus_metrics.py  test_broadcast.py  test_broadcast_dedup.py  test_broadcast_logging.py  test_conflict_resolver.py  test_connection.py  test_connection_logging.py  test_control_client.py  test_control_plane_logging.py  test_control_server.py  test_control_server_auth.py  test_control_signaling.py  test_discord.py  test_game_detection_advanced.py  test_game_profiles.py  test_games.py  test_games_logging.py  test_ipam.py  test_logging_config.py  test_metrics.py  test_metrics_logging.py  test_mod_sync.py  test_multi_peer.py  test_nat.py  test_no_legacy_core_imports.py  test_party.py  test_performance.py  test_profiling.py  test_relay_selector.py  test_relay_server.py  test_server_browser.py  test_settings.py  test_task_manager.py  test_updater.py  test_utils.py  test_wireguard.py
tools/: performance_monitor.py  run_code_quality.py  update_readme_version.py  update_supported_games_readme.py
(+124 files in other folders)
